src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <label>Card Operational System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Creation_date_in_OS__c</fullName>
        <label>Creation date in OS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Minimum_Fee__c</fullName>
        <label>Minimum Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_NeedApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ER_Solution__c</fullName>
        <formula>Product2.ER_Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>